--- a/src/sass/_book.scss
+++ b/src/sass/_book.scss
@@ -8,35 +8,39 @@
   ///////////
   // COVER
   &__cover {
-    height: 40rem;
-    position: relative;
+    padding: 4rem 3rem;
     background-color: $color-bg-tertiary;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    gap: 2.5rem;
     border-bottom: 1px solid $color-border;
   }
 
   &__img {
-    max-width: 26rem;
-    max-height: 38rem;
+    max-width: 28rem;
+    max-height: 40rem;
     display: block;
     object-fit: contain;
-    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.15);
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
+    border-radius: 0.4rem;
   }
 
   &__title {
-    position: absolute;
-    bottom: 2rem;
-    left: 3rem;
+    text-align: center;
     color: $color-text;
-    font-weight: 600;
-    font-size: 3rem;
+    font-weight: 700;
+    font-size: 2.8rem;
     letter-spacing: -0.5px;
-    line-height: 1.2;
+    line-height: 1.3;
+    max-width: 90%;
+
+    span {
+      display: inline-block;
+    }
 
     @media only screen and (max-width: $bp-medium) {
-      font-size: 2.5rem;
+      font-size: 2.4rem;
     }
   }
 
@@ -45,9 +49,12 @@
   &__details {
     display: flex;
     align-items: center;
-    padding: 3rem;
-    gap: 3rem;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 2.5rem 3rem;
+    gap: 2.5rem;
     border-bottom: 1px solid $color-border;
+    background-color: $color-bg-primary;
   }
 
   &__info {
@@ -57,9 +64,10 @@
   }
 
   &__info-icon {
-    height: 2rem;
-    width: 2rem;
+    height: 2.2rem;
+    width: 2.2rem;
     fill: $color-accent;
+    flex-shrink: 0;
   }
 
   &__info-text {
@@ -93,7 +101,7 @@
   ///////////
   // DESCRIPTION
   &__description {
-    padding: 3rem;
+    padding: 3rem 4rem;
     font-size: 1.5rem;
     line-height: 1.8;
     color: $color-text;
@@ -133,7 +141,8 @@
     display: flex;
     gap: 1.5rem;
     align-items: center;
-    border-top: 1px solid $color-border;
+    justify-content: center;
+    background-color: $color-bg-primary;
   }
 
   &__btn {
