--- a/src/sass/_download.scss
+++ b/src/sass/_download.scss
@@ -24,6 +24,13 @@
   position: relative;
   min-width: 400px;
   text-align: center;
+
+  @media only screen and (max-width: $bp-small) {
+    min-width: auto;
+    width: 90vw;
+    max-width: 400px;
+    padding: 2rem;
+  }
 }
 
 .countdown {
