--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -9,16 +9,30 @@
   justify-content: space-between;
   padding: 1rem 3rem;
 
+  @media only screen and (max-width: $bp-medium) {
+    flex-direction: column;
+    gap: 1.5rem;
+    padding: 1.5rem 2rem;
+  }
+
   &__logo {
     display: flex;
     align-items: center;
     margin-left: 1rem;
+
+    @media only screen and (max-width: $bp-medium) {
+      margin-left: 0;
+    }
   }
 
   &__logo-img {
     height: 7rem;
     width: auto;
     display: block;
+
+    @media only screen and (max-width: $bp-medium) {
+      height: 4.5rem;
+    }
   }
 }
 
@@ -34,6 +48,11 @@
   flex: 1;
   max-width: 50rem;
 
+  @media only screen and (max-width: $bp-medium) {
+    max-width: 100%;
+    flex: none;
+  }
+
   &:focus-within {
     border-color: $color-accent;
     background-color: $color-bg-primary;
@@ -43,6 +62,7 @@
     height: 2rem;
     width: 2rem;
     fill: $color-text-light;
+    flex-shrink: 0;
   }
 
   &__field {
@@ -125,6 +145,17 @@
   visibility: hidden;
   opacity: 0;
   transition: all 0.3s;
+
+  @media only screen and (max-width: $bp-medium) {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: auto;
+    width: 100vw;
+    max-height: 70vh;
+    overflow-y: auto;
+    margin-top: 0.5rem;
+  }
 
   &__list {
     list-style: none;
